# modelops-calabaria

./: .gitignore  CLAUDE.md  README.md  calabaria-mvp-plan-v2.md  calabaria-mvp-plan.md  calibration.json  grid_job.json  pyproject.toml  test_diagnostic_data.py  test_job.json  test_optimization_results.parquet  wire-protocol-design.md
.github/workflows/: tests.yml
docs/: index.md  targets.md
docs/archive/: calabaria_mvp_plan.md  calabaria_pure_functional_design.md
docs/design/: 01-core-principles.md  01_core_principles.md  02-parameter-system.md  03-grammar-of-parameters.md  04-wire-protocol-architecture.md  04_wire_protocol_architecture.md  manifest_system.md  target_entrypoint_plan.md  wire_protocol_design.md
docs/process/: calibration_throughput_analysis.md  gather_performance_regression.md  parallel_trial_execution.md  throughput_diagnostic_plan.md
examples/: api_usage.py  coordinate_system_demo.py  fluent_api_complete.py  test_calibration.py
examples/epi_models/: README.md  manifest.json  pyproject.toml  study_test.json
examples/epi_models/e2e/: README_BUNDLE_WORKFLOW.md  test_bundle_workflow.py
examples/epi_models/src/: __init__.py
examples/epi_models/src/models/: __init__.py  seir.py  seir_age.py
scripts/: analyze_perf_logs.py
src/modelops_calabaria/: __init__.py  api.py  base_model.py  builder.py  constants.py  decorators.py  modelops_wire.py  scenarios.py  simulator.py  targets.py  wire_loader.py  wire_protocol.py
src/modelops_calabaria/calibration/: __init__.py  base.py  builders.py  factory.py  optuna_adapter.py  wire.py
src/modelops_calabaria/cli/: __init__.py  __main__.py  calibration.py  config.py  diagnostics.py  discover.py  hashing.py  manifest.py  sampling.py  verify.py
src/modelops_calabaria/core/: __init__.py  alignment.py  constants.py  target.py  types.py
src/modelops_calabaria/core/evaluation/: __init__.py  aggregate.py  base.py  composable.py  factories.py  likelihood.py  loglik_fns.py  reduce.py
src/modelops_calabaria/core/evaluation/loss/: __init__.py  base.py  nll.py
src/modelops_calabaria/parameters/: __init__.py  config.py  coordinates.py  transforms.py  types.py  view.py
src/modelops_calabaria/sampling/: __init__.py  base.py  grid.py  sobol.py
src/modelops_calabaria/utils/: __init__.py  imports.py  registry.py  text.py
tests/: conftest.py  test_alignment.py  test_base_model.py  test_builder.py  test_cli_calibration.py  test_cli_discover.py  test_cli_hashing.py  test_cli_integration.py  test_cli_manifest.py  test_cli_sampling.py  test_cli_verify.py  test_configuration_space.py  test_coordinate_system.py  test_critical_issues.py  test_decorators.py  test_diagnostics.py  test_evaluation.py  test_likelihood_targets.py  test_loss_targets.py  test_model_simulator.py  test_parameter_types.py  test_parameter_view.py  test_sampling_strategies.py  test_scenarios.py  test_target_validation.py  test_targets.py  test_transforms.py  test_wire_loader.py  test_wire_protocol.py
tests/calibration/: test_calibration_wire.py  test_optuna_adapter.py
tests/integration/: test_full_pipeline.py
