[project]
name = "modelops-calabaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modelops-bundle",
    "modelops-contracts",
    "polars>=1.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
modelops-contracts = { path = "../modelops-contracts" }
modelops-bundle = { path = "../modelops-bundle" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.139.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
